After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 697343 - rtpsbcdepay: fix compilation using mingw
rtpsbcdepay: fix compilation using mingw
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal normal
: 1.1.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-04-05 12:42 UTC by Nicola
Modified: 2013-04-05 12:51 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
rtpsbcdepay: fix compilation using mingw (816 bytes, patch)
2013-04-05 12:42 UTC, Nicola
committed Details | Review

Description Nicola 2013-04-05 12:42:20 UTC
Created attachment 240740 [details] [review]
rtpsbcdepay: fix compilation using mingw

see attachment
Comment 1 Tim-Philipp Müller 2013-04-05 12:51:41 UTC
Thanks, pushed:

 commit c41c16424dfc2f508f11395dacc93563610011ed
 Author: Nicola Murino <nicola.murino@gmail.com>
 Date:   Fri Apr 5 14:38:43 2013 +0200

    rtpsbcdepay: fix printf format compiler warnings
    
    https://bugzilla.gnome.org/show_bug.cgi?id=697343