gst/rtp/gstrtpsbcdepay.c
@@ -202,7 +202,7 @@ gst_rtp_sbc_depay_process (GstRTPBaseDepayload * base, GstBuffer * in)
 
   gst_rtp_buffer_map (in, GST_MAP_READ, &rtp);
 
-  GST_LOG_OBJECT (depay, "Got %" G_GUINT64_FORMAT " bytes",
+  GST_LOG_OBJECT (depay, "Got %" G_GSIZE_FORMAT " bytes",
       gst_buffer_get_size (in));
 
   if (gst_rtp_buffer_get_marker (&rtp)) {
